--- a/Adopted_users.ipynb
+++ b/Adopted_users.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1E0nPrQ-7iC4d8J3eZhQrBGIyhy3kflUn",
+      "authorship_tag": "ABX9TyM1fPsbq7r62d5BCpkVqEjj",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/grvvrmtech/AdoptedAnalysis/blob/main/Adopted_users.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -36,7 +49,7 @@
       "metadata": {
         "id": "fsnbDak67nbI"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -47,7 +60,7 @@
       "metadata": {
         "id": "GsU1d2NbLuLL"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +71,7 @@
       "metadata": {
         "id": "OpCliSGR7qbn"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +86,7 @@
         "id": "Dis2iu55qVn1",
         "outputId": "d0e5b322-ef69-4ca7-c996-6961ceee2d87"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +119,7 @@
         "id": "j6oEwbweEetj",
         "outputId": "4d3b7cdc-dba3-4c5f-d4c1-b583ca82975b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +437,7 @@
         "id": "3tjmuDSIEYsT",
         "outputId": "0908ff20-54cb-4c4f-c9e4-7bae89855f54"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +777,7 @@
         "id": "u0lfOwZ8qXo4",
         "outputId": "d5124966-29cf-483e-df12-2d7260285fe2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +817,7 @@
         "id": "X2GMouzHEoC_",
         "outputId": "2a230a09-b4e9-44d3-b964-b808f5498d23"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1260,7 +1273,7 @@
         "id": "8ymY8kXGp9S3",
         "outputId": "235ba414-b1f6-4b35-8b7f-59a8433ee058"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,7 +1298,7 @@
         "id": "yNQ6kS2oqSUq",
         "outputId": "5cb093ab-fa1a-4df5-f93d-8ac5350e8047"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1330,7 @@
       "metadata": {
         "id": "2fDefo0zqj8u"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1329,7 +1342,7 @@
       "metadata": {
         "id": "WpI4FnRgqz-b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1345,7 +1358,7 @@
         "id": "xTXRN3rZrvn2",
         "outputId": "a79308d4-287c-4cb1-fce4-8f774c5f9274"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,7 +1388,7 @@
       "metadata": {
         "id": "7asslZW1t22L"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1404,7 +1417,7 @@
         "id": "mix3HN0bls77",
         "outputId": "9f8ab2e5-bdb9-4dd5-fb08-2abab30fa09a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1472,7 +1485,7 @@
       "metadata": {
         "id": "y-CvSaV8iXGx"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1505,7 +1518,7 @@
         "id": "JaB1h-iusYal",
         "outputId": "43d4faa5-aef4-42ce-8b01-d4a2563efe72"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1541,7 +1554,7 @@
         "id": "54JA9TJArJHK",
         "outputId": "7a5afa7f-48d7-4709-d8cb-17fec069169f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1854,7 +1867,7 @@
       "metadata": {
         "id": "YEs4I8b8h4og"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1896,7 +1909,7 @@
         "id": "kddLB30sm8jL",
         "outputId": "48348bd1-8d0a-4fc3-e3d4-2f836f8751d6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1930,7 +1943,7 @@
       "metadata": {
         "id": "3cTMxhrvnEls"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1972,7 +1985,7 @@
         "id": "Up3_JpP2nmyk",
         "outputId": "688e0311-b8db-460c-f31f-9e88a74e9f53"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2006,7 +2019,7 @@
       "metadata": {
         "id": "tMitBupsyl0T"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2049,7 +2062,7 @@
         "id": "r0fl86UMntd1",
         "outputId": "eb415208-6fd5-4917-a475-8e7e67cdaf69"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2116,7 +2129,7 @@
         "id": "FJD5reCJnzcA",
         "outputId": "fa969586-254f-4c54-aeb8-4461f0f587d9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2164,7 +2177,7 @@
         "id": "FXaoSVs-oHOX",
         "outputId": "b6ab6fa3-2daf-4492-c71d-1df2d355f1f6"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2186,7 +2199,7 @@
       "metadata": {
         "id": "breqrFlU7ZL3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2211,7 +2224,7 @@
         "id": "vqRQOtG0oRkQ",
         "outputId": "d216009a-e61e-44d2-d97f-8d922612b745"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2233,7 +2246,7 @@
       "metadata": {
         "id": "9RIFUVlG7lRg"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2291,7 +2304,7 @@
         "id": "Ao1iGMz-6CGX",
         "outputId": "fb846a1a-9ae9-4055-9e1f-ea4b056b4968"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
